# krowbar

./: .gitignore  Cargo.toml  Justfile  README.md
.github/: crates.yaml
.github/aur/: PKGBUILD.template  SRCINFO.template  publish.sh
.github/workflows/: aur.yaml  ci.yaml  crates.yaml
resources/: base.scss  font-template.scss.tmpl  theme-template.scss.tmpl  theme.scss
scripts/: release.sh
src/: bar.rs  bspwm.rs  config.rs  main.rs  widgets.rs  xbackend.rs
src/instruments/: alsa.rs  mod.rs
