[package]
name = "krowbar"
version = "0.3.0"
authors = ["bloznelis <lukas.bloznelis@gmail.com>"]
description = "Status bar for BSPWM"
license = "MIT"
homepage = "https://github.com/bloznelis/krowbar"
repository = "https://github.com/bloznelis/krowbar"
edition = "2021"
keywords = ["bspwm", "statusbar", "ui"]
readme = "README.md"

[dependencies]
bspc-rs = "0.1.1"
x11rb = { version = "0.13.1", features = ["randr"] }
gtk4 = {version = "0.9", package = "gtk4"}
gdk4 = {version = "0.9", package = "gdk4"}
gdk4-x11 = {version = "0.9", package = "gdk4-x11"}
anyhow = "1.0.88"
tokio = {version = "1", features = ["full"]}
async-channel = "2.3.1"
chrono = "0.4.38"
log4rs = "1.3.0"
log = "0.4.22"
clap = { version = "4.5.17", features = ["derive"] }
sysinfo = "0.32"
battery = "0.7.8"
async-broadcast = "0.7.1"
grass = "0.13.4"
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
